# llm-scan-pdf-ocr

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml  llamacpp.yaml  mineru.yaml  sglang.yaml  vllm.yaml
examples/: run_local.sh
src/pdf_ocr/: __init__.py  cli.py  pipeline.py
src/pdf_ocr/backends/: __init__.py  base.py  mineru.py  vlm.py
src/pdf_ocr/llm/: openai_compat.py  prompts.py  schema.py
src/pdf_ocr/ocr/: crop.py  extractor.py
src/pdf_ocr/pdf/: page.py  render.py
src/pdf_ocr/render/: markdown.py
src/pdf_ocr/utils/: config.py  logging.py
tests/: test_config.py  test_crop.py  test_markdown.py  test_mineru_backend.py  test_pipeline_failure_isolation.py  test_schema.py
