[project]
name = "pdf-ocr"
version = "0.1.0"
description = "Convert scanned PDFs to Markdown using a local VLM (Qwen3-VL-8B)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "elixir", email = "elixirevo@gmail.com" }]

dependencies = [
    # PDF rendering
    "pypdfium2>=4.30.0",
    # Image handling
    "pillow>=10.4.0",
    # OpenAI-compatible client (works with vLLM / llama.cpp / SGLang)
    "openai>=1.50.0",
    # Schema validation for VLM JSON output
    "pydantic>=2.8.0",
    # Config loading
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    # CLI + progress
    "typer>=0.12.5",
    "rich>=13.8.0",
    # Async + retry
    "anyio>=4.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
pdf-ocr = "pdf_ocr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_ocr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
